[package]
name = "agentsample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
curl = "0.4.43"
regex = "1.5.5"
anyhow = "^1"
tokio = { version = "1.17.0", features = ["full"] }
clap = "3.1.6"
rustyline = "9.0.0"
lazy_static = "1.4.0"
fork = "0.1"
sysinfo = "0.21.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8"
log = "0.4"
log4rs = "1.0.0"
num_cpus = "1.13.1"
#hyper = "0.14.18"
#hyper-tls = "0.5.0"
reqwest = { version = "0.11.10", features = ["json"] }


[profile.release]
lto = true
